# quantum-no-free-lunch

./: .gitignore  README.md  barren_plateau.py  barren_plateau_cheat.py  barren_plateau_cost_function.py  barren_plateau_hessian.py  barren_plateau_solve.py  barren_plateau_torch.py  classic_training.py  cobyla_sgd.py  config.py  cost_modifying_functions.py  cuda_qnn.py  data.py  evaluation.py  experiment.py  generate_experiments.py  logger.py  measure_circuit_time.py  metrics.py  plot_fig3.py  pyproject.toml  qnn.py  qnn_times_approx.py  quantum_backends.py  quantum_gates.py  quantum_training.py  quick_tensor_training.py  readout_exp.py  refactor.md  rotation_six_matrix.py  tensor_training.py  tensor_training_cuda.py  test.py  test_cobyla.py  test_qnns.py  test_stuff.py  utils.py  visualisation.py  visualise_small_std.py  (+1 more)
experimental_results/exp1/: cobyla_result.npy  cobyla_result.txt  config.json  result.npy  result.txt
experimental_results/exp1/ibmq/: config.json  result.npy  result.txt
experimental_results/exp2/: config.json
experimental_results/test/: error_std.npy  risks.npy
files_for_alex/: dataset.pt  qnn_params.pt  unitary_U.pt  unitary_qnn_params.pt
plots/PennylaneQNN/cpu/2_qbits/200_epochs_8_datapoints/: 999
plots/loss_map/: gradient_map.html
plots/optimisation/: temp_plot.py
qnns/: cuda_qnn.py  qnn.py  quantum_qnn.py
unrefactored/: log.py  parameter_shift_training.py  qnn.py  quick_tensor_training.py  tensor_qnns.py  tensor_training.py  tensor_training_cuda.py  test.py  test_cobyla.py  utils.py
